<?xml version="1.0"?>
<package format="2">
  <name>phidgets_gyroscope</name>
  <version>0.7.9</version>
  <description>Driver for the Phidgets Gyroscope devices</description>

  <maintainer email="martin.guenther@dfki.de">Martin Günther</maintainer>
  <maintainer email="clalancette@openrobotics.org">Chris Lalancette</maintainer>

  <license>BSD</license>

  <author>Chris Lalancette</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>phidgets_api</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>

  <exec_depend>launch</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
