<?xml version="1.0"?>
<package format="2">
  <name>phidgets_high_speed_encoder</name>
  <version>0.7.9</version>
  <description>Driver for the Phidgets high speed encoder devices</description>

  <maintainer email="geoffrey.viola@asirobots.com">Geoff Viola</maintainer>
  <maintainer email="jlblanco@ual.es">José-Luis Blanco Claraco</maintainer>

  <license>BSD</license>

  <author email="geoffrey.viola@asirobots.com">Geoff Viola</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>libphidget21</depend>
  <depend>phidgets_api</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <build_depend>message_generation</build_depend>

  <exec_depend>message_runtime</exec_depend>
</package>
