<?xml version="1.0"?>
<package format="2">
  <name>phidgets_high_speed_encoder</name>
  <version>2.3.3</version>
  <description>Driver for the Phidgets high speed encoder devices</description>

  <maintainer email="martin.guenther@dfki.de">Martin Günther</maintainer>
  <maintainer email="clalancette@openrobotics.org">Chris Lalancette</maintainer>

  <license>BSD</license>

  <author email="geoffrey.viola@asirobots.com">Geoff Viola</author>
  <author email="jlblanco@ual.es">José-Luis Blanco Claraco</author>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <depend>phidgets_api</depend>
  <depend>phidgets_msgs</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>sensor_msgs</depend>

  <exec_depend>launch</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
