<?xml version="1.0"?>
<package format="2">
  <name>phidgets_humidity</name>
  <version>1.0.9</version>
  <description>Driver for the Phidgets Humidity devices</description>

  <maintainer email="martin.guenther@dfki.de">Martin Günther</maintainer>
  <maintainer email="clalancette@openrobotics.org">Chris Lalancette</maintainer>

  <license>BSD</license>

  <author>Gary Edwards</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>nodelet</depend>
  <depend>phidgets_api</depend>
  <depend>roscpp</depend>
  <depend>roslaunch</depend>
  <depend>std_msgs</depend>

  <export>
    <nodelet plugin="${prefix}/phidgets_humidity_nodelet.xml" />
  </export>
</package>
