<?xml version="1.0"?>
<package format="2">
  <name>phidgets_ik</name>
  <version>0.7.11</version>
  <description>Driver for the Phidgets InterfaceKit devices</description>

  <maintainer email="martin.guenther@dfki.de">Martin Günther</maintainer>
  <maintainer email="clalancette@openrobotics.org">Chris Lalancette</maintainer>

  <license>BSD</license>

  <author>James Sarrett</author>
  <author email="russel@appliedinvention.com">Russel Howe</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>nodelet</depend>
  <depend>phidgets_api</depend>
  <depend>phidgets_msgs</depend>
  <depend>pluginlib</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <export>
    <nodelet plugin="${prefix}/phidgets_ik_nodelet.xml" />
  </export>
</package>
