<?xml version="1.0"?>
<package format="2">
  <name>phidgets_ik</name>
  <version>2.3.3</version>
  <description>Driver for the Phidgets InterfaceKit devices</description>

  <license>BSD</license>

  <maintainer email="martin.guenther@dfki.de">Martin Günther</maintainer>
  <maintainer email="clalancette@openrobotics.org">Chris Lalancette</maintainer>

  <!--
  <url type="website">http://ros.org/wiki/phidgets_ik</url>
  -->

  <author>James Sarrett</author>
  <author email="russel@appliedinvention.com">Russel Howe</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>phidgets_analog_inputs</exec_depend>
  <exec_depend>phidgets_digital_inputs</exec_depend>
  <exec_depend>phidgets_digital_outputs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
