<?xml version="1.0"?>
<package format="2">
  <name>phidgets_imu</name>
  <version>0.7.11</version>
  <description>Driver for the Phidgets Spatial 3/3/3 devices</description>

  <maintainer email="martin.guenther@dfki.de">Martin Günther</maintainer>
  <maintainer email="clalancette@openrobotics.org">Chris Lalancette</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/phidgets_imu</url>
  <url type="repository">https://github.com/ros-drivers/phidgets_drivers.git</url>
  <url type="bugtracker">https://github.com/ros-drivers/phidgets_drivers/issues</url>

  <author email="ccnyroboticslab@gmail.com">Ivan Dryanovski</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>diagnostic_msgs</depend>
  <depend>diagnostic_updater</depend>
  <depend>nodelet</depend>
  <depend>phidgets_api</depend>
  <depend>pluginlib</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>

  <build_depend>roslaunch</build_depend>

  <exec_depend>diagnostic_aggregator</exec_depend>
  <exec_depend>imu_filter_madgwick</exec_depend>

  <export>
    <nodelet plugin="${prefix}/phidgets_imu_nodelet.xml" />
  </export>
</package>
