<?xml version="1.0"?>
<package format="2">
  <name>phidgets_spatial</name>
  <version>2.3.3</version>
  <description>Driver for the Phidgets Spatial 3/3/3 devices</description>

  <maintainer email="martin.guenther@dfki.de">Martin Günther</maintainer>
  <maintainer email="clalancette@openrobotics.org">Chris Lalancette</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/phidgets_spatial</url>
  <url type="repository">https://github.com/ros-drivers/phidgets_drivers.git</url>
  <url type="bugtracker">https://github.com/ros-drivers/phidgets_drivers/issues</url>

  <author email="ccnyroboticslab@gmail.com">Ivan Dryanovski</author>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <depend>phidgets_api</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>

  <exec_depend>launch</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
